can handle unkown view_extra fields names

--- a/settings/mugo_view_extras.ini
+++ b/settings/mugo_view_extras.ini
@@ -12,6 +12,11 @@ HandlerClass=MugoViewExtras
 Sets[]
 Sets[standard]=Standard
 
+# Controls if the templates render out all fields that are stored
+# in the attribute, or if it only shows the fields that are configured
+# in this configuration file
+ShowUnkownFields=disabled
+
 
 [Set-standard]
 Tags[]
