Fix typos and add inline INI documentation about cascading view extras

--- a/settings/mugo_view_extras.ini
+++ b/settings/mugo_view_extras.ini
@@ -10,7 +10,10 @@
 HandlerClass=MugoViewExtras
 
 Sets[]
+# By default, the standard set will cascade down the node tree
 Sets[standard]=Standard
+# By default, the self-instance set will only apply to the node
+Sets[self-instance]=Self
 
 # Controls if the templates render out all fields that are stored
 # in the attribute, or if it only shows the fields that are configured
