Fix example configuration for cascading vs non-cascading values

--- a/settings/mugo_view_extras.ini
+++ b/settings/mugo_view_extras.ini
@@ -10,10 +10,7 @@
 HandlerClass=MugoViewExtras
 
 Sets[]
-# By default, the standard set will cascade down the node tree
 Sets[standard]=Standard
-# By default, the self-instance set will only apply to the node
-Sets[self-instance]=Self
 
 # Controls if the templates render out all fields that are stored
 # in the attribute, or if it only shows the fields that are configured
@@ -23,10 +20,13 @@ ShowUnkownFields=disabled
 
 [Set-standard]
 Tags[]
+# By default, the "standard" values will cascade down the node tree
 Tags[standard]=Standard
 Tags[special-innovation]=Special-innovation
 Tags[special-energy]=Special-Energy
 Tags[special-ideas]=Special-Ideas
+# By default, the "self-instance" values will only apply to the node
+Tags[self-instance]=Self
 
 Fields[]
 Fields[top]=Top Middle
