Support browse mode start node and allowed classes per field

--- a/settings/mugo_view_extras.ini
+++ b/settings/mugo_view_extras.ini
@@ -60,3 +60,11 @@ FieldGroups[]
 FieldGroups[Ads]=right_col,right_col_category,content_column_width_ad,ad_block_1,ad_block_2,ad_block_3,ad_block_4,ad_block_5,embed_gallery_top,embed_gallery_bottom,ad_footer_1,ad_footer_2,ad_footer_3,ad_footer_banner
 FieldGroups[Misc]=spotlights_bottom,facebook_thumbnail,omniture_special
 
+# Field settings
+# Use "tag_name" in the block name to apply only to a specific tag or "default" to apply to all tags
+# [<field_name>_<default|tag_name>_field_settings]
+# Set browse mode start node
+# BrowseModeStartNode=<node_id>
+# Limit content classes in browse mode
+# BrowseModeAllowedClasses[]
+# BrowseModeAllowedClasses[]=article
