Use eZTags to configure view_extras. <include> tag added to support individual caching times for view_extras

--- a/settings/mugo_view_extras.ini
+++ b/settings/mugo_view_extras.ini
@@ -9,24 +9,10 @@
 # Autoload will find it. 
 HandlerClass=MugoViewExtras
 
-Sets[]
-Sets[standard]=Standard
-
 # Controls if the templates render out all fields that are stored
 # in the attribute, or if it only shows the fields that are configured
 # in this configuration file
 ShowUnkownFields=disabled
-
-
-[Set-standard]
-Tags[]
-# By default, the "standard" values will cascade down the node tree
-Tags[standard]=Standard
-Tags[special-innovation]=Special-innovation
-Tags[special-energy]=Special-Energy
-Tags[special-ideas]=Special-Ideas
-# By default, the "self-instance" values will only apply to the node
-Tags[self-instance]=Self
 
 Fields[]
 Fields[top]=Top Middle
@@ -53,12 +39,11 @@ Fields[footer_z_8]=Pixel ads
 Fields[under_menu]=Section Sponsor
 Fields[under_menu_article]=Section Sponsor on article like classes
 Fields[article_top]=Section Sponsor on article like classes inside article body
-Fields[story_toolbar]=right side of story toolbar on articles
 Fields[embed_video]=ad unit under the embeded video player (only fora video for now)
 
 FieldGroups[]
-FieldGroups[Ads]=right_col,right_col_category,content_column_width_ad,ad_block_1,ad_block_2,ad_block_3,ad_block_4,ad_block_5,embed_gallery_top,embed_gallery_bottom,ad_footer_1,ad_footer_2,ad_footer_3,ad_footer_banner
-FieldGroups[Misc]=spotlights_bottom,facebook_thumbnail,omniture_special
+FieldGroups[Ads]=right_col,right_col_category,ad_block_1,ad_block_2,ad_block_3,ad_block_4,ad_block_5,embed_gallery_top,embed_gallery_bottom,ad_footer_1,ad_footer_2,ad_footer_3,ad_footer_banner
+FieldGroups[Misc]=spotlights_bottom,facebook_thumbnail
 
 # Field settings
 # Use "tag_name" in the block name to apply only to a specific tag or "default" to apply to all tags
